# quilting

./: README.md  synthesis.py
c++/quilting/: CMakeLists.txt  Makefile  run_comparison.sh  synthesis.cpp  transfer.cpp
c++/quilting/images_report/: T1.tif  T1_200.tif  T2.tif  T2_200.tif  T3-out.tif  T3.tif  T3_200.tif  T4.tif  T4_200.tif  T5-out.tif  T5.tif  T5_200.tif  T6-out.tif  T6.tif  T6_200.tif  T7-out.tif  T7.tif  T7_200.tif  T8-out.tif  T8.tif  T8_200.tif  T9-out.tif  T9.tif  T9_200.tif
c++/quilting/src/: metric.cpp  quilting.cpp  quilting.h  util.cpp  util.h
